--- a/index.html
+++ b/index.html
@@ -6,31 +6,32 @@
     <title>Password Generator</title>
 </head>
 <script src="https://cdn.tailwindcss.com"></script>
-<body class="flex justify-center items-center h-screen bg-blue-950">
+<body class="flex justify-center items-center h-screen bg-blue-950 text-white">
     <div>
-        <h1>Password Generator</h1>
+        <h1 class="text-4xl">Password Generator</h1>
+        <input type="text" name="pw" id="pw" placeholder="Click on generate button">
         <div>
-            <div></div>
-            <div></div>
+            <button class="bg-violet-600">Generate</button>
+            <button class="bg-violet-600">Copy to clipboard</button>
         </div>
         <div>
-            <p></p>
+            <p>Password length</p>
             <input type="text" name="length" id="length">
         </div>
         <div>
-            <p></p>
+            <p>Include uppercase letters</p>
             <input type="checkbox" name="" id="">
         </div>
         <div>
-            <p></p>
+            <p>Include lowercase letters</p>
             <input type="checkbox" name="" id="">
         </div>
         <div>
-            <p></p>
+            <p>Include numbers</p>
             <input type="checkbox" name="" id="">
         </div>
         <div>
-            <p></p>
+            <p>Include symbols</p>
             <input type="checkbox" name="" id="">
         </div>
     </div>
