add boldness in some texts

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             >
                   <h1 class="text-3xl">Password Generator</h1>
                   <p id="pw"
-                        class="bg-white w-full rounded px-2 py-1 text-slate-400 m-3"
+                        class="bg-white w-full rounded px-2 py-1 text-slate-400 m-3 font-semibold"
                   >
                         click on Generate button
                   </p>
@@ -26,14 +26,14 @@
                         <p>copied ✅</p>
                   </div>
                   <div class="flex justify-around gap-2 mx-4">
-                        <button class="bg-violet-600 px-5 py-1 rounded" onclick="start()">
+                        <button class="font-bold bg-violet-600 px-5 py-1 rounded" onclick="start()">
                               Generate
                         </button>
-                        <button class="bg-violet-600 px-5 py-1 rounded" onclick="copytext()">
+                        <button class="font-bold bg-violet-600 px-5 py-1 rounded" onclick="copytext()">
                               Copy to clipboard
                         </button>
                   </div>
-                  <div class="mt-8">
+                  <div class="mt-8 font-bold">
                         <div class="flex gap-32 items-center">
                               <p>Password length</p>
                               <input
